# gopher-mcp

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md
.claude/skills/digest/: SKILL.md
.claude/skills/mirror/: SKILL.md
.claude/skills/note/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/research/: SKILL.md
examples/: README.md  dump-demo.toml  fs-demo.toml  gopher-cli.toml  gopher-mcp-tui.toml  gopher-mcp.toml  multi-adapter-demo.toml  obsidian-vault.toml  rdf-demo.toml  remote-rdf-demo.toml  rss-demo.toml  sample.ttl  vault-demo.toml
gopher-cli/: Cargo.toml
gopher-cli-core/: Cargo.toml
gopher-cli-core/src/: lib.rs  mcp.rs  store.rs
gopher-cli-core/src/adapters/: mod.rs  rss.rs
gopher-cli-server/: Cargo.toml
gopher-cli-server/src/: config.rs  main.rs  tls.rs
gopher-cli/src/: client.rs  config.rs  main.rs  ui.rs
gopher-mcp-core/: Cargo.toml
gopher-mcp-core/src/: gopher.rs  lib.rs  mcp.rs  router.rs  store.rs
gopher-mcp-core/src/adapters/: fs.rs  mod.rs  rdf.rs
gopher-mcp-server/: Cargo.toml
gopher-mcp-server/src/: config.rs  main.rs
gopher-mcp-tui/: Cargo.toml
gopher-mcp-tui/src/: app.rs  cli.rs  client.rs  config.rs  main.rs  ui.rs
scripts/: create_demo_gif.py  gen-certs.sh  test-adapters.py  test-mcp.py  test-mcp.sh  test-no-tls.py  test-no-tls.sh  test-proxy.py  test-proxy.sh
src/: main.rs  mcp.rs  router.rs  store.rs
