[package]
name = "gopher-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.6"
axum-server = { version = "0.5", features = ["tls-rustls"] }
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4"] }
async-trait = "0.1"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
rcgen = "0.11"
