[package]
name = "gopher-cli-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["adapter-all"]
adapter-rss = ["gopher-cli-core/adapter-rss"]
adapter-fs = ["gopher-cli-core/adapter-fs"]
adapter-rdf = ["gopher-cli-core/adapter-rdf"]
adapter-all = ["adapter-rss", "adapter-fs", "adapter-rdf"]

[dependencies]
gopher-cli-core = { path = "../gopher-cli-core" }
tokio = { version = "1.36", features = ["full"] }
axum = "0.6"
axum-server = { version = "0.5", features = ["tls-rustls"] }
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
