[package]
name = "gopher-cli"
version = "0.1.0"
edition = "2021"
description = "Terminal browser and CLI for gopher-cli"

[features]
default = ["adapter-all"]
adapter-rss = ["gopher-cli-core/adapter-rss"]
adapter-fs = ["gopher-cli-core/adapter-fs"]
adapter-rdf = ["gopher-cli-core/adapter-rdf"]
adapter-all = ["adapter-rss", "adapter-fs", "adapter-rdf"]

[dependencies]
gopher-cli-core = { path = "../gopher-cli-core" }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
toml = "0.8"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
