[package]
name = "gopher-mcp-core"
version = "0.1.0"
edition = "2021"
description = "Framework-agnostic MCP server core for the Gopher protocol"
license = "Apache-2.0"
repository = "https://github.com/penserai/gopher-mcp"

[features]
default = []
adapter-rss = ["feed-rs", "reqwest"]
adapter-fs = []
adapter-rdf = ["sophia", "reqwest"]
adapter-all = ["adapter-rss", "adapter-fs", "adapter-rdf"]

[dependencies]
tokio = { version = "1.36", features = ["io-util", "net", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"

# Optional adapter dependencies
feed-rs = { version = "2.3", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"], optional = true }
sophia = { version = "0.9", features = ["xml"], optional = true }
